--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,10 @@
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    line-height: 1.6;
+  width: 100%;
+  height: 100vh;
+  line-height: 1.6;
+  overflow-x: hidden;
 }
 
 .container {
